2005-09-30 Stas Sergeev <stsp@aknet.ru>
	* interface/xaw_i.c, interface/server_c.c, interface/soundspec.c,
	  interface/motif_i.c, libarc/url_newsgroup.c, libarc/url_http.c,
	  libarc/url.c, libarc/url_ftp.c, libarc/url_file.c,
	  libarc/url_news.c, timidity/audriv_mme.c, timidity/wrd_read.c:
	  use stderr instead of stdout

2005-09-30  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mod2midi.c: Defining out the ME_KEYPRESSURE related code

2005-09-28  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* interface/Makefile.am (EXTRA_DIST, install.dynamics):
	  sorry, this file was broken.

2005-09-26 Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c: usr stdout instead when stdin is a pipe.

2005-09-23 Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c (cmd_open): Security fix.

2005-09-23  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: FreeBSD has tcltk named libtcl84 and libtk84

	* timidity/timidity.c (list_dyna_interface): change dynamic
	  interface lister to some try-and-error mechanizm.
	* interface/*.txt : deleted. (not used any longer)

2005-09-22  Mikhail Teterin <mi@aldan.algebra.com>

	* timidity/playmidi.c (process_sysex_event): fix typo

2005-09-22  Kentaro Sato <kentaro@ranvis.com>

	* timidity/smplfile.c: Fixed possible crash when Sampler chunk's
	  dwSamplePeriod is erroneously 0.

2005-05-08  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (dynamic_interface_module): rewrite.
	* timidity/dl_dyld.c (dl_find_symbol): fix potential buffer overflow
	* timidity/dl_dyld.c (dl_free): implement of dl_free()

2005-04-03  Kentaro Sato <kentaro@ranvis.com>

	* timidity/sndfont.c: Fixed to compile cfgforsf.

2004-12-22  Ed Catmur  <ed@catmur.co.uk>

	* interface/gtk_i.c (Launch_Gtk_Process): Fix assertion error in
	  GTK-2.6.0

2004-12-08  Kentaro Sato <kentaro@ranvis.com>

	* libarc/arc.c:
	  Fixed to skip the platform specific path separators right after #.

2004-12-04  Henrique de Moraes Holschuh <hmh@debian.org>
